@@ -3,15 +3,20 @@ package org.example.backend.service.impl;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.example.backend.common.LanguageInterceptor;
 import org.example.backend.domain.Faculty;
+import org.example.backend.domain.Student;
 import org.example.backend.dto.request.FacultyRequest;
 import org.example.backend.dto.response.FacultyResponse;
 import org.example.backend.mapper.FacultyMapper;
 import org.example.backend.repository.IFacultyRepository;
 import org.example.backend.service.IFacultyService;
+import org.example.backend.service.ITranslationService;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,6 +24,7 @@ import java.util.stream.Collectors;
 @Slf4j
 public class FacultyServiceImpl implements IFacultyService {
     private final IFacultyRepository facultyRepository;
+    private final ITranslationService translationService;
 
     @Override
     @Transactional
@@ -39,12 +45,46 @@ public class FacultyServiceImpl implements IFacultyService {
     @Override
     public List<FacultyResponse> getAllFaculties() {
         List<Faculty> faculties = facultyRepository.findAll();
-
         log.info("Retrieved all faculties from database");
 
-        return faculties.stream()
-                .map(FacultyMapper::mapToResponse)
-                .collect(Collectors.toList());
+        String currentLanguage = LanguageInterceptor.CURRENT_LANGUAGE.get();
+        if ("vi".equals(currentLanguage)) {
+            return faculties.stream()
+                    .map(FacultyMapper::mapToResponse)
+                    .collect(Collectors.toList());
+        } else {
+            // Get translations for faculties
+            List<Integer> facultyIds = faculties.stream()
+                    .map(Faculty::getId)
+                    .toList();
+            Map<Integer, Map<String, String>> facultyTranslations = translationService
+                    .getTranslations("Faculty", facultyIds, currentLanguage);
+
+            // If faculties have students, get translations for students
+            List<Integer> studentIds = faculties.stream()
+                    .filter(faculty -> faculty.getStudents() != null && !faculty.getStudents().isEmpty())
+                    .flatMap(faculty -> faculty.getStudents().stream())
+                    .map(Student::getStudentId)
+                    .map(id -> Integer.parseInt(id.replaceAll("[^\\d]", "")))
+                    .distinct()
+                    .toList();
+
+            Map<Integer, Map<String, String>> studentTranslations = Collections.emptyMap();
+            if (!studentIds.isEmpty()) {
+                studentTranslations = translationService
+                        .getTranslations("Student", studentIds, currentLanguage);
+            }
+
+            final Map<Integer, Map<String, String>> finalStudentTranslations = studentTranslations;
+
+            return faculties.stream()
+                    .map(faculty -> FacultyMapper.mapToResponseWithTranslation(
+                            faculty,
+                            facultyTranslations.getOrDefault(faculty.getId(), Collections.emptyMap()),
+                            finalStudentTranslations
+                    ))
+                    .collect(Collectors.toList());
+        }
     }
 
     @Override
@@ -57,7 +97,31 @@ public class FacultyServiceImpl implements IFacultyService {
 
         log.info("Retrieved faculty from database");
 
-        return FacultyMapper.mapToResponse(faculty);
+        String currentLanguage = LanguageInterceptor.CURRENT_LANGUAGE.get();
+        if ("vi".equals(currentLanguage)) {
+            return FacultyMapper.mapToResponse(faculty);
+        } else {
+            // Get translation for faculty
+            Map<String, String> facultyTranslations = translationService.getTranslation(
+                    "Faculty", faculty.getId(), currentLanguage);
+
+            // Get translations for students if present
+            Map<Integer, Map<String, String>> studentTranslations = Collections.emptyMap();
+            if (faculty.getStudents() != null && !faculty.getStudents().isEmpty()) {
+                List<Integer> studentIds = faculty.getStudents().stream()
+                        .map(Student::getStudentId)
+                        .map(studentId -> Integer.parseInt(studentId.replaceAll("[^\\d]", "")))
+                        .toList();
+                studentTranslations = translationService
+                        .getTranslations("Student", studentIds, currentLanguage);
+            }
+
+            return FacultyMapper.mapToResponseWithTranslation(
+                    faculty,
+                    facultyTranslations,
+                    studentTranslations
+            );
+        }
     }
 
     @Override
